versions/v2.11/modules/en/pages/rancher-admin/experimental-features/continuous-delivery.adoc
= Continuous Delivery
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: how-to-guides/advanced-user-guides/enable-experimental-features/continuous-delivery.adoc 
:page-product-path: rancher-admin/experimental-features/continuous-delivery.adoc
ifeval::["{build-type}" != "community"]
:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
:xref-fleet: xref:integrations/fleet/fleet.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/index.adoc
:xref-fleet: xref:integrations-in-rancher/fleet/index.adoc
endif::[]

{xref-fleet}[Continuous Delivery with Fleet] comes preinstalled in Rancher and can't be fully disabled. However, the Fleet feature for GitOps continuous delivery may be disabled using the `continuous-delivery` feature flag.

To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]

|===
| Environment Variable Key | Default Value | Description

| `continuous-delivery`
| `true`
| This flag disables the GitOps continuous delivery feature of Fleet.
|===

If Fleet was disabled in Rancher v2.5.x, it will become enabled if Rancher is upgraded to v2.6.x. Only the continuous delivery part of Fleet can be disabled. When `continuous-delivery` is disabled, the `gitjob` deployment is no longer deployed into the Rancher server's local cluster, and `continuous-delivery` is not shown in the Rancher UI.
